--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -63,6 +63,14 @@ button {
     font-size: 20px;
 }
 
+.interactive {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+}
+
 .portfolio {
     display: flex;
     flex-direction: column;
@@ -76,14 +84,7 @@ button {
 }
 
 .portfolio__portfolio-head {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
     background-color: var(--color-accent);
-    grid-column: 1 / 4;
-    grid-row: 1 / 2;
-    padding: 20px;
 }
 
 .portfolio__portfolio-title {
@@ -191,6 +192,21 @@ button {
     -ms-overflow-style: none;  /* IE и Edge (старый) */
 }
 
+.contacts {
+    padding: 0;
+    background-color: var(--color-bg);
+    border: 4px solid var(--color-accent-secondary-1);
+    overflow: hidden;
+}
+
+.contacts__contacts-head {
+    display: flex;
+    background-color: var(--color-accent-secondary-2);
+}
+
+.contacts__contacts-info {
+    padding: 40px;
+}
 @media (min-width: 769px) {
     .portfolio__portfolio-content {
         padding: 20px;
